kubernetes/talos/deploy/helloworld/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-service
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: helloworld
  type: ClusterIP
